[tool.poetry]
name = "mcp-hub"
version = "0.1.0"
description = "Aggregating MCP proxy engine — self-hostable, MIT licensed"
authors = ["Mistaike.ai <hello@mistaike.ai>"]
readme = "README.md"
license = "MIT"
packages = [{include = "mcp_hub", from = "src"}]
homepage = "https://github.com/mistaike-ai/mcp-hub"
repository = "https://github.com/mistaike-ai/mcp-hub"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
redis = "^7.2.1"
pydantic = "^2.0"
cryptography = "^46.0.0"
anyio = "^4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
flake8 = "^7.0.0"
bandit = "^1.7.7"
fakeredis = "^2.0.0"
respx = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-fail-under=90"
